assets/scss/_styles_project.scss
/* ... */
body {
  overflow-x: hidden;
}

// Main Middle Body
.td-content {
  h2 {
    color: $casper;
  }

  // Inline code
  p code,
  li>code,
  table code {
    color: inherit;
    padding: 0.2em 0.4em;
    margin: 0;
    font-size: 85%;
    word-break: normal;
    background-color: rgba($black, 0.05);
    border-radius: $border-radius;

    br {
      display: none;
    }
  }

  // Code blocks
  pre {
    word-wrap: normal;
    background-color: $gray-900;
    padding: $spacer;

    >code {
      background-color: inherit !important;
      padding: 0;
      margin: 0;
      font-size: 100%;
      word-break: normal;
      white-space: pre;
      border: 0;
    }
  }

  img,
  .md__image img,
  img.md-image-responsive {
    display: block;
    width: auto;
    max-width: clamp(320px, 100%, 700px);
    height: auto;
    margin: 0 auto;
    object-fit: contain;
    box-sizing: border-box;
  }

  overflow-x: hidden;
}
.td-content .card img {
  width: 100% ;
}

// Links

a {
  color: $primary;
  text-decoration: none;
}

a:hover {
  color: $white;
}

a:not([href]):not([class]),
a:not([href]):not([class]):hover {
  color: inherit;
  text-decoration: none;
}

// Taxonomy
.article-meta-bg {
  background-color: $gray-900;
  padding: 0.5rem;
  padding-left: 1rem;
}

.taxonomy {
  // .taxonomy-terms-cloud

  .taxonomy-term {

    border-width: 0;
    border-radius: 0 3px 3px 0;
    display: inline-block;
    font-size: 1em;
    line-height: 1.5em;
    min-height: 1.5em;
    max-width: 100%;
    padding: 0 0.5em 0 1em;
    position: relative;
    margin: 0 0.5em 0.2em 0;
    text-decoration: none;
    transition: color 0.2s;
    clip-path: polygon(100% 0, 100% 100%, 0.8em 100%, 0 50%, 0.8em 0);


    &:hover {
      background-color: $primary;
      color: $white;

    }

  }

  .article-teaser {
    &.card {
      padding: 1em;
      margin-bottom: 1.5em;
      background-color: $dark;
    }

    .breadcrumb {
      margin-bottom: 0em;
      font-size: 0.85rem;
    }

    .article-meta-bg {
      margin-bottom: 0em;
    }
  }
}

// Footer
.td-footer {
  background-color: $black;
  // bottom: 0%;
  z-index: 5;
}

.td-sidebar {
  background-image: linear-gradient(to top,
      #1e2117,
      #1d1912,
      #18120e,
      #0f0a09,
      #000000);
  position: sticky;
  height: calc(100vh - 5.5rem);
  top: 5.5rem;
  overflow-y: auto;
  padding-top: 0;
  margin-top: 0;
  overflow-x: hidden;
}

.td-sidebar #td-sidebar-menu,
.td-sidebar .td-sidebar__search {
  padding-top: 0;
  margin-top: 0;
}

@media screen and (max-width: 768px) {
  .td-sidebar {
    position: relative;
    height: auto;
    top: 0;
    padding-top: 0;
  }
}

@media screen and (min-height: 800px) and (min-width: 768px) {
  .td-sidebar {
    height: 100vh;
    top: 0;
    padding-top: 3rem;
  }
}

// Left sidebar
.td-sidebar-nav {
  overflow: hidden;
  padding: 0px;

  &__section-title {
    a {
      color: $gray-400;
      font-weight: $font-weight-bold;
    }
  }

  .td-sidebar-link {
    &__page {
      color: $gray-400;
      font-weight: $font-weight-light;
    }

    &__section {
      margin-top: 1rem;
      font-family:
        "Qanelas Soft",
        sans-serif,
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        "Helvetica Neue",
        Arial,
        "Apple Color Emoji",
        "Segoe UI Emoji",
        "Segoe UI Symbol";
    }
  }

  a {
    &:hover {
      color: $white;
      text-decoration: none;
    }

    &.active:not(.tree-root) {
      border-width: 1px;
      border-style: solid;
      border-image: linear-gradient(to left,
          rgba($dark, 0) 30%,
          rgba($primary, 0.3) 60%,
          $primary 90% 100%) 1;
      background-image: linear-gradient(to left,
          rgba($dark, 0.2) 30%,
          rgba($primary, 0.3) 60%,
          $primary 90% 100%) 1;
      padding: 0.25rem;
      padding-left: 0.5rem !important;
      // background-image: linear-gradient(to left, rgba($dark,.33),rgba($dark,.5),rgba($dark,.75),#1e2117, #31412b, #3b6447, #378b6d, #00b39f);
      // background-color: rgba($primary, .05);
      color: $secondary;
    }

    &.active.tree-root {
      border: 2px solid $lightslategray !important;
      padding: 0.25rem;
      padding-left: 0.5rem !important;
      background-color: rgba($lightslategray, 0.1);
      color: $white;
    }
  }
}

// Right sidebar
.td-sidebar-toc {
  line-height: 1.25rem;
  border-left: 1px solid $border-color;
  background-image: linear-gradient(to top,
      #1e2117,
      #1d1912,
      #18120e,
      #0f0a09,
      #000000);

  @supports (position: sticky) {
    position: sticky;
    top: 5.5rem;
    padding-top: 1rem;
    height: calc(100vh - 5.5rem);
    overflow-y: auto;
  }

  .taxo-categories {
    margin-top: 2rem;
  }
}

.td-page-meta {
  a {
    display: block;
    color: $gray-400;
    line-height: 1.65rem;
    font-weight: $font-weight-medium;

    &:hover {
      color: $white;
      text-decoration: none;
    }
  }

  .td-page-meta--project-issue {
    visibility: hidden;
  }
}

.td-toc {
  margin-top: 2rem;

  #TableOfContents {
    a {
      color: $lightslategray;

      &:hover {
        color: $white;
        text-decoration: none;
      }
    }
  }
}

// pageinfo
.pageinfo {
  font-weight: $font-weight-medium;
  background: $black;
  font-family: "Open Sans";
  border-style: solid;
  border-color: #00b39f;
}

// front-matter
.matterinfo {
  font-weight: $font-weight-medium;
  background: $black;
  font-family: "Qanelas Soft";
  border-color: #00b39f;
  border-radius: 10px;
}

.heading {
  font-size: 1.2rem;
  color: #00b39f;
}

.matterheader {
  font-size: 1.2rem;
  color: $casper;
}

.matterinfo .plan-support {
  padding: .5rem;
  border: .5px solid $border-color;
  display: flex;
  align-items: center;
  color: $casper;
  &:hover {
    background-color: rgba($primary, 0.3)
  }
}

.matterinfo .plan-support .support-icon {
  width: 20px;
  height: 20px;
  margin-right: 10px;
}
/* ... */

